# ethsnarks-il

./: .gitignore  .travis.yml  Makefile  README.md
.appendix/: validate_one_zero.py
cxx/: CMakeLists.txt  README.md  circuit_reader.cpp  circuit_reader.hpp  jsnark_test.cpp  main.cpp
python/snarkil/: commands.py  debugger.py  parser.py  program.py  r1cs.py
tests/circuits/: .gitignore  add.circuit  add.input  add.test  const-mul-neg.circuit  const-mul-neg.input  const-mul-neg.test  const-mul.circuit  const-mul.test  mul.circuit  mul.input  mul.test  or.circuit  or.input  table1.circuit  table1.input  table2.circuit  table2.input  table2.test  table3.circuit  table3.input  table3.test  xor.circuit  xor.input  zerop.circuit  zerop.input  zerop.test
